# aiida-impuritysupercellconv

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.cla/version1/: signatures.json
.github/workflows/: ci.yml  cla.yml  deploy.yml
aiida_impuritysupercellconv/: __init__.py
aiida_impuritysupercellconv/workflows/: impuritysupercellconv.py  utils.py
aiida_musConv/: __init__.py
aiida_musConv/workflows/: musConv.py
aiida_musconv/: __init__.py
aiida_musconv/workflows/: musconv.py
docs/: 01-IsolatedImpurityWorkChain.ipynb  README.md  myst.yml
examples/: run_aiidamusconv_Si_LiF.py  run_aiidamusconv_si_lif.py
tests/: conftest.py  test_workflow.py
