[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-musconv"
dynamic = ["version"]  # read from aiida_musconv/__init__.py
description = "aiida-musconv is a plugin that allows to obtain converged supercell size for an interstitial impurity calculation."
authors = [{name = "Muon  group Parma"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA"
]
keywords = ["aiida", "plugin"]
requires-python = ">=3.8"
dependencies = [
    "aiida-core>=2.0,<3",
    "aiida-quantumespresso>=4.2.0",
    "musconv"
]

[project.urls]
Source = "https://github.com/positivemuon/aiida-musconv"

[project.optional-dependencies]
pre-commit = [
    "pre-commit>=2.21.0"
]
tests = [
    "pgtest~=1.3.1",
    "wheel~=0.31",
    "pytest~=6.0",
    "pytest-cov"
]

[project.entry-points."aiida.workflows"]
"musconv" = "aiida_musconv.workflows.musconv:MusconvWorkChain"


[tool.flit.module]
name = "aiida_musconv"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:aiida:",
    "ignore::DeprecationWarning:plumpy:",
    "ignore::DeprecationWarning:yaml:"
]
